--- a/templates/login.html
+++ b/templates/login.html
@@ -1,2 +1,2 @@
-{% extends "base.html" %} {%block title%}Login{%endblock%}{% block content %} {%
-endblock %}
+{% extends "base.html" %} {%block title%}Login{%endblock%}{% block content %}
+Hello Login {% endblock %}
