--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full bg-gray-900">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  <body>
+  <body class="h-full">
     <div class="w-full mx-auto">
       <nav
         class="relative bg-gray-900 after:pointer-events-none after:absolute after:inset-x-0 after:bottom-0 after:h-px after:bg-white/10"
@@ -95,6 +95,19 @@
             <div
               class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
             >
+              <!-- Login and Register -->
+              <a
+                href="/login"
+                aria-current="page"
+                class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-white mr-3"
+                >Login</a
+              >
+              <a
+                href="/signup"
+                aria-current="page"
+                class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-white"
+                >Sign Up</a
+              >
               <button
                 type="button"
                 class="relative rounded-full p-1 text-gray-400 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-indigo-500"
