--- a/templates/base.html
+++ b/templates/base.html
@@ -69,10 +69,10 @@
                 <div class="flex space-x-4">
                   <!-- Current: "bg-gray-950/50 text-white", Default: "text-gray-300 hover:bg-white/5 hover:text-white" -->
                   <a
-                    href="#"
+                    href="/"
                     aria-current="page"
                     class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-white"
-                    >Dashboard</a
+                    >Home</a
                   >
                   <a
                     href="#"
@@ -151,14 +151,14 @@
                   class="w-48 origin-top-right rounded-md bg-gray-800 py-1 outline -outline-offset-1 outline-white/10 transition transition-discrete [--anchor-gap:--spacing(2)] data-closed:scale-95 data-closed:transform data-closed:opacity-0 data-enter:duration-100 data-enter:ease-out data-leave:duration-75 data-leave:ease-in"
                 >
                   <a
-                    href="#"
+                    href="/profile"
                     class="block px-4 py-2 text-sm text-gray-300 focus:bg-white/5 focus:outline-hidden"
                     >Your profile</a
                   >
                   <a
-                    href="#"
+                    href="/create-post"
                     class="block px-4 py-2 text-sm text-gray-300 focus:bg-white/5 focus:outline-hidden"
-                    >Settings</a
+                    >Create Post</a
                   >
                   <a
                     href="#"
