Fixed issues with global user

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,48 +16,16 @@
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
     <form action="#" method="POST" class="space-y-6">
       <div>
-        <label for="firstname" class="block text-sm/6 font-medium text-gray-100"
-          >First Name</label
-        >
-        <div class="mt-2">
-          <input
-            id="firstname"
-            type="firstname"
-            name="firstname"
-            required
-            autocomplete="firstname"
-            class="block w-full rounded-md bg-white/5 px-3 py-1.5 text-base text-white outline-1 -outline-offset-1 outline-white/10 placeholder:text-gray-500 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-500 sm:text-sm/6"
-          />
-        </div>
-      </div>
-
-      <div>
-        <label for="lastname" class="block text-sm/6 font-medium text-gray-100"
-          >Last Name</label
-        >
-        <div class="mt-2">
-          <input
-            id="lastname"
-            type="lastname"
-            name="lastname"
-            required
-            autocomplete="lastname"
-            class="block w-full rounded-md bg-white/5 px-3 py-1.5 text-base text-white outline-1 -outline-offset-1 outline-white/10 placeholder:text-gray-500 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-500 sm:text-sm/6"
-          />
-        </div>
-      </div>
-
-      <div>
         <label for="phone" class="block text-sm/6 font-medium text-gray-100"
-          >Phone Number</label
+          >Username</label
         >
         <div class="mt-2">
           <input
-            id="phone"
-            type="phone"
-            name="phone"
+            id="username"
+            type="text"
+            name="username"
             required
-            autocomplete="phone"
+            autocomplete="username"
             class="block w-full rounded-md bg-white/5 px-3 py-1.5 text-base text-white outline-1 -outline-offset-1 outline-white/10 placeholder:text-gray-500 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-500 sm:text-sm/6"
           />
         </div>
