--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
                 </svg>
               </button>
             </div>
+
             <div
               class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
             >
@@ -92,10 +93,12 @@
                 </div>
               </div>
             </div>
+
             <div
               class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
             >
               <!-- Login and Register -->
+              {% if not current_user.is_authenticated %}
               <a
                 href="/login"
                 aria-current="page"
@@ -108,6 +111,7 @@
                 class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-white"
                 >Sign Up</a
               >
+              {% else %}
               <button
                 type="button"
                 class="relative rounded-full p-1 text-gray-400 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-indigo-500"
@@ -161,12 +165,13 @@
                     >Create Post</a
                   >
                   <a
-                    href="#"
+                    href="/sign-out"
                     class="block px-4 py-2 text-sm text-gray-300 focus:bg-white/5 focus:outline-hidden"
                     >Sign out</a
                   >
                 </el-menu>
               </el-dropdown>
+              {% endif %}
             </div>
           </div>
         </div>
