--- a/templates/create-post.html
+++ b/templates/create-post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {%block title%}Create Post{%endblock%}{% block content
 %}
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-  <form class="sm:px-20 lg:px-20">
+  <form class="sm:px-20 lg:px-20" method="POST">
     <div class="space-y-12">
       <div class="border-b border-white/10 pb-12">
         <h2 class="text-base/7 font-semibold text-white">Create Post</h2>
