--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="/static/css/inter.css" />
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body class="h-full">
@@ -76,19 +77,9 @@
                     >Home</a
                   >
                   <a
-                    href="#"
+                    href="/authors"
                     class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white"
-                    >Team</a
-                  >
-                  <a
-                    href="#"
-                    class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white"
-                    >Projects</a
-                  >
-                  <a
-                    href="#"
-                    class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white"
-                    >Calendar</a
+                    >Authors</a
                   >
                 </div>
               </div>
