--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,12 @@
     <div
       class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-700 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3"
     >
-      {% for post in posts %}
+      {% if posts %} {% for post in posts %}
       <article class="flex max-w-xl flex-col items-start justify-between">
         <div class="flex items-center gap-x-4 text-xs">
-          <time datetime="2020-03-16" class="text-gray-400">Mar 16, 2020</time>
+          <time datetime="2020-03-16" class="text-gray-400"
+            >{{ post.date_created.strftime('%Y-%m-%d') }}</time
+          >
           <a
             href="#"
             class="relative z-10 rounded-full bg-gray-800/60 px-3 py-1.5 font-medium text-gray-300 hover:bg-gray-800"
@@ -26,7 +28,7 @@
           <h3
             class="mt-3 text-lg/6 font-semibold text-white group-hover:text-gray-300"
           >
-            <a href="#">
+            <a href="/post/{{post.id}}">
               <span class="absolute inset-0"></span>
               {{post.post_title}}
             </a>
@@ -43,16 +45,18 @@
           />
           <div class="text-sm/6">
             <p class="font-semibold text-white">
-              <a href="#">
+              <a href="/posts/{{post.user.username}}">
                 <span class="absolute inset-0"></span>
-                Michael Foster
+                {{post.user.username}}
               </a>
             </p>
-            <p class="text-gray-400">Co-Founder / CTO</p>
+            <p class="text-gray-400"><a href="">Co-Founder / CTO</a></p>
           </div>
         </div>
       </article>
-      {% endfor %}
+      {% endfor %} {% else %}
+      <h3 class="text-lg/10 text-gray-300 ml-2">No posts found :|</h3>
+      {% endif %}
     </div>
   </div>
 </div>
