--- a/templates/author/posts-by-author.html
+++ b/templates/author/posts-by-author.html
@@ -1,24 +1,22 @@
 {% extends "base.html" %} {%block title%}Post details{%endblock%}{% block
 content %}
 <div class="rgy rhc ria">
-  <div class="rfv rgb rgf rgi rgn rgo rha rhz rih rin">
+  <div class="rfv rgb rgf rgi rgn rgo rha rhz">
     <div class="rfv rgd rge rgt rgv rhd rib rid rig rik rio">
       <div class="rfw rgp rgr">
+        {% if posts %} {% for post in posts %}
         <article class="rhb">
-          <div class="rhs rft rgg">
-            <time datetime="2020-03-16" class="rfz rhh rhl">Mar 10, 2020</time>
+          <div class="rhs rft">
+            <time datetime="2020-03-16" class="rfz rhh rhl"
+              >{{ post.date_created.strftime('%Y-%m-%d') }}</time
+            >
             <h2 class="rfx rhf rhi rhq rhr">
-              <a href="#">
+              <a href="/post/{{post.id}}">
                 <span class="rfs rfu"></span>
-                Boost your conversion rate
+                {{post.post_title}}
               </a>
             </h2>
-            <p class="rfy rhh rhl">
-              Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam
-              vitae illo. Non aliquid explicabo necessitatibus unde. Sed
-              exercitationem placeat consectetur nulla deserunt vel iusto
-              corrupti dicta laboris incididunt.
-            </p>
+            <p class="rfy rhh rhl">{{post.post_content}}</p>
           </div>
           <div class="rfy rga">
             <a href="#" class="rft rga rgm rhh rhi rhq">
@@ -31,32 +29,7 @@ content %}
             </a>
           </div>
         </article>
-        <article class="rhb">
-          <div class="rhs rft rgg">
-            <time datetime="2020-03-10" class="rfz rhh rhl">Feb 12, 2020</time>
-            <h2 class="rfx rhf rhi rhq rhr">
-              <a href="#">
-                <span class="rfs rfu"></span>
-                How to use search engine optimization to drive sales
-              </a>
-            </h2>
-            <p class="rfy rhh rhl">
-              Optio sit exercitation et ex ullamco aliquid explicabo. Dolore do
-              ut officia anim non ad eu. Magna laboris incididunt commodo elit
-              ipsum.
-            </p>
-          </div>
-          <div class="rfy rga">
-            <a href="#" class="rft rga rgm rhh rhi rhq">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80"
-                alt=""
-                class="rgc rgh rgs rgx"
-              />
-              Tom Cook
-            </a>
-          </div>
-        </article>
+        {% endfor %} {% else %} {% endif %}
       </div>
     </div>
   </div>
