--- a/templates/post/post-details.html
+++ b/templates/post/post-details.html
@@ -24,6 +24,40 @@ content %}
         </div>
       </div>
       <div class="mt-5">
+        <!-- Comments from other author -->
+        {% if post_comments %} {% for comment in post_comments %}
+        <article
+          class="p-1 mb-3 ml-1 lg:ml-12 text-base bg-white rounded-lg dark:bg-gray-900"
+        >
+          <footer class="flex justify-between items-center mb-2">
+            <div class="flex items-center">
+              <p
+                class="inline-flex items-center mr-3 text-sm text-gray-900 dark:text-white font-semibold"
+              >
+                <img
+                  class="mr-2 w-6 h-6 rounded-full"
+                  src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                  alt="Jese Leos"
+                />{{comment.user.username}}
+              </p>
+              <p class="text-sm text-gray-600 dark:text-gray-400">
+                <time
+                  pubdate=""
+                  datetime="2022-02-12"
+                  title="February 12th, 2022"
+                  >Feb. 12, 2022</time
+                >
+              </p>
+            </div>
+
+            <!-- Dropdown menu -->
+          </footer>
+          <p class="text-gray-500 dark:text-gray-400">{{comment.text}}</p>
+        </article>
+        {% endfor %} {% endif %}
+
+        <!-- Post Comment Starts here -->
+        {% if post.user.id != author%}
         <label for="Post Comment" class="block text-sm/6 font-medium text-white"
           >Post Comment</label
         >
@@ -43,6 +77,8 @@ content %}
             </button>
           </div>
         </form>
+        {% endif %}
+        <!-- Post Comment Ends here -->
       </div>
     </article>
 
